PR c++/14002 	* semantics.c (finish_id_expression): Do not return an 	IDENTIFIER_NODE when lookup finds a PARM_DECL.
	PR c++/14002
	* g++.dg/parse/template13.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77183 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-03  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/14002
+	* g++.dg/parse/template13.C: New test.
+
+2004-02-03  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/13978
 	* g++.dg/template/koenig4.C: New test.
 
