PR c++/13950 	* parser.c (cp_parser_class_name): Robustify.
	PR c++/13970
	* parser.c (cp_parser_cache_group): Do not consume the EOF token.

	PR c++/13950
	* g++.dg/template/lookup4.C: New test.

	PR c++/13970
	* g++.dg/parse/error14.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77186 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-03  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13950
+	* parser.c (cp_parser_class_name): Robustify.
+
+	PR c++/13970
+	* parser.c (cp_parser_cache_group): Do not consume the EOF token.
+
 	PR c++/14002
 	* semantics.c (finish_id_expression): Do not return an
 	IDENTIFIER_NODE when lookup finds a PARM_DECL.
