--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-03  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13925
+	* g++.dg/template/lookup5.C: New test.
+
+2004-02-03  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/13950
 	* g++.dg/template/lookup4.C: New test.
 
