* varasm.c (const_desc_rtx_sym_eq): Compare symbol strings.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77191 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-03  Richard Henderson  <rth@redhat.com>
+
+	* varasm.c (const_desc_rtx_sym_eq): Compare symbol strings.
+
 2004-02-03  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* config.gcc (sh[234]l): Use little endian fragments.
