PR target/9348 	* expr.c (expand_expr_real) <MULT_EXPR>:  When performing widening 	multiplies with a multiplication of the wrong signedness, its the 	signedness of the multiplication that we've performed that needs to 	be passed to expand_mult_highpart_adjust.  Avoid emitting a nop-move 	if expand_mult_highpart_adjust places the result in target.
	* gcc.c-torture/execute/multdi-1.c: New test case.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77192 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-03  Roger Sayle  <roger@eyesopen.com>
+
+	PR target/9348
+	* gcc.c-torture/execute/multdi-1.c: New test case.
+
 2004-02-03  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13925
