2004-02-04  Paolo Bonzini  <bonzini@gnu.org>
	* gcc.dg/noncompile/20001228-1.c: Fix for new
	error message.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77199 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-04  Paolo Bonzini  <bonzini@gnu.org>
+
+	* gcc.dg/noncompile/20001228-1.c: Fix for new
+	error message.
+
 2004-02-03  Roger Sayle  <roger@eyesopen.com>
 
 	PR target/9348
