* MAINTAINERS: Remove i960 port.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77219 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* MAINTAINERS: Remove i960 port.
+
 2004-01-23  DJ Delorie  <dj@redhat.com>
 
 	* Makefile.def (target_modules) [libiberty]: Don't stage.
