--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/fr30/fr30.h (FUNCTION_VALUE): Remove the
+	target-independent comment.
+
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* doc/interface.texi, doc/tm.texi, doc/trouble.texi: Don't
 	mention deprecated target macros.
 
