--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/arc/arc.h, config/fr30/fr30.h
+	(SETUP_INCOMING_VARARGS): Remove the target-independent
+	comments.
+	* doc/tm.texi: Don't mention deprecated target macros.
+
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/fr30/fr30.h (FUNCTION_VALUE): Remove the
 	target-independent comment.
 
