--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* emit-rtl.c (gen_rtx): Remove.
+	* genattrtab.c: Don't mention gen_rtx in a comment.
+	* rtl.h: Remove the prototype for gen_rtx.
+	* doc/md.texi: Replace gen_rtx with gen_rtx_REG.
+
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/arc/arc.h, config/fr30/fr30.h
 	(SETUP_INCOMING_VARARGS): Remove the target-independent
 	comments.
