--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* doc/tm.texi: Replace SETUP_INCOMING_VARARGS with
+	TARGET_SETUP_INCOMING_VARARGS.
+
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* emit-rtl.c (gen_rtx): Remove.
 	* genattrtab.c: Don't mention gen_rtx in a comment.
 	* rtl.h: Remove the prototype for gen_rtx.
