* calls.c (initialize_argument_information): Add CALL_FROM_THUNK_P 	parameter.  Use it instead of current_function_is_thunk. 	* function.h (struct function): Update documentation for is_thunk. 	* tree.h (CALL_FROM_THUNK_P): New macro. 	* config/alpha/alpha.c (alpha_sa_mask): Do not check 	no_new_pseudos when testing current_function_is_thunk. 	* config/rs6000/rs6000.c (rs6000_ra_ever_killed): Likeiwse.
	* decl.c (cxx_push_function_context): Do not set
	current_function_is_thunk.
	* method.c (use_thunk): Set CALL_FROM_THUNK on the call to the
	actual function.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77244 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (cxx_push_function_context): Do not set
+	current_function_is_thunk.
+	* method.c (use_thunk): Set CALL_FROM_THUNK on the call to the
+	actual function.
+
 2003-02-04  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/13997
