* gcc.dg/arm-mmx-1.c: Don't look for ldmfd if -mthumb.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77249 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* gcc.dg/arm-mmx-1.c: Don't look for ldmfd if -mthumb.
+
 2004-02-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* objc.dg/encode-2.m, objc.dg/encode-3.m, objc.dg/encode-4.m: Fix
