* cgraphunit.c (cgraph_postorder): Fix typo in comment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Aldy Hernandez  <aldyh@redhat.com>
+ 
+        * cgraphunit.c (cgraph_postorder): Fix typo in comment.
+
 2004-02-04  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md ("*la_64" + peepholes, "reload_indi"): Move
