PR c++/13969 	* g++.dg/template/static6.C: New test.
	PR c++/13969
	* cp-tree.h (fold_non_dependent_expr): New function.
	* parser.c (cp_parser_fold_non_dependent_expr): Remove.
	(cp_parser_template_argument): Use fold_non_dependent_expr.
	(cp_parser_direct_declarator): Likewise.
	* pt.c (fold_non_dependent_expr): New function.
	(convert_nontype_argument): Use it.
	(tsubst_qualified_id): Simplify.
	(tsubst_copy_and_build): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77260 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,17 @@
 2004-02-04  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13969
+	* cp-tree.h (fold_non_dependent_expr): New function.
+	* parser.c (cp_parser_fold_non_dependent_expr): Remove.
+	(cp_parser_template_argument): Use fold_non_dependent_expr.
+	(cp_parser_direct_declarator): Likewise.
+	* pt.c (fold_non_dependent_expr): New function.
+	(convert_nontype_argument): Use it.
+	(tsubst_qualified_id): Simplify.
+	(tsubst_copy_and_build): Likewise.
+
+2004-02-04  Mark Mitchell  <mark@codesourcery.com>
+
 	* decl.c (cxx_push_function_context): Do not set
 	current_function_is_thunk.
 	* method.c (use_thunk): Set CALL_FROM_THUNK on the call to the
