--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* alloc-pool.h, c-convert.c, c-lang.c, c-tree.h,
+	caller-save.c, df.h, genconfig.c, global.c, lcm.c,
+	ra-rewrite.c, ra.c, regclass.c, regs.h, resource.c,
+	sched-rgn.c, config/arm/aof.h, config/arm/cirrus.md,
+	config/arm/fpa.md, config/arm/iwmmxt.md,
+	config/arm/netbsd-elf.h, config/arm/netbsd.h,
+	config/m68hc11/m68hc11.md, config/mips/iris5.h,
+	config/mn10300/mn10300.md, config/rs6000/altivec.md,
+	config/sparc/netbsd-elf.h: Update copyright.
+
 2004-02-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* config/sparc/sparc.c (function_arg_pass_by_reference): Return 1
