--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* error.c, search.c: Update copyright.
+
 2004-02-04  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13969
