--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* typeck.c: Update copyright.
+
 2004-02-02  Tom Tromey  <tromey@redhat.com>
 
 	* decl.c (java_init_decl_processing): Remove duplicate
