* config/alpha/alpha.c, config/arc/arc.c, 	config/arm/arm-cores.def, config/arm/arm.c, config/arm/arm.h, 	config/arm/arm1026ejs.md, config/arm/arm1136jfs.md, 	config/arm/arm926ejs.md, config/arm/vfp.md, config/avr/avr.c, 	config/c4x/c4x.c, config/cris/cris.c, config/frv/frv.md, 	config/i386/i386.c, config/i386/i386.h, config/i386/i386.md, 	config/ia64/ia64.c, config/ia64/unwind-ia64.c, 	config/iq2000/iq2000.c, config/m32r/m32r.c, 	config/mips/mips.c, config/mmix/mmix.c, config/mmix/mmix.h, 	config/ns32k/ns32k.c, config/pa/pa.c, config/pdp11/pdp11.c, 	config/rs6000/darwin-ldouble.c, config/rs6000/rs6000.c, 	config/rs6000/rs6000.h, config/sparc/sparc.c, 	config/vax/vax.c: Fix comment typos.  Follow spelling 	conventions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77267 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1955,7 +1955,7 @@
     case TYPE_SSEMOV:
       if (get_attr_mode (insn) == MODE_TI)
 	  return "movdqa\t{%1, %0|%0, %1}";
-      /* FALLTHRU */
+      /* Fall through.  */
     case TYPE_MMXMOV:
       /* Moves from and into integer register is done using movd opcode with
  	 REX prefix.  */
@@ -2005,7 +2005,7 @@
     case TYPE_SSEMOV:
       if (get_attr_mode (insn) == MODE_TI)
 	  return "movdqa\t{%1, %0|%0, %1}";
-      /* FALLTHRU */
+      /* Fall through.  */
     case TYPE_MMXMOV:
       return "movq\t{%1, %0|%0, %1}";
     case TYPE_MULTI:
