--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,22 @@
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/alpha/alpha.c, config/arc/arc.c,
+	config/arm/arm-cores.def, config/arm/arm.c, config/arm/arm.h,
+	config/arm/arm1026ejs.md, config/arm/arm1136jfs.md,
+	config/arm/arm926ejs.md, config/arm/vfp.md, config/avr/avr.c,
+	config/c4x/c4x.c, config/cris/cris.c, config/frv/frv.md,
+	config/i386/i386.c, config/i386/i386.h, config/i386/i386.md,
+	config/ia64/ia64.c, config/ia64/unwind-ia64.c,
+	config/iq2000/iq2000.c, config/m32r/m32r.c,
+	config/mips/mips.c, config/mmix/mmix.c, config/mmix/mmix.h,
+	config/ns32k/ns32k.c, config/pa/pa.c, config/pdp11/pdp11.c,
+	config/rs6000/darwin-ldouble.c, config/rs6000/rs6000.c,
+	config/rs6000/rs6000.h, config/sparc/sparc.c,
+	config/vax/vax.c: Fix comment typos.  Follow spelling
+	conventions.
+
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* alloc-pool.h, c-convert.c, c-lang.c, c-tree.h,
 	caller-save.c, df.h, genconfig.c, global.c, lcm.c,
 	ra-rewrite.c, ra.c, regclass.c, regs.h, resource.c,
