--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,24 @@
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/darwin.c, config/darwin.h, config/freebsd-spec.h,
+	config/arm/arm.c, config/arm/arm.md,
+	config/cris/cris-protos.h, config/fr30/fr30.c,
+	config/fr30/fr30.h, config/h8300/h8300.c, config/i386/i386.h,
+	config/i860/i860.c, config/i860/i860.h, config/ia64/ia64-c.c,
+	config/ia64/ia64.c, config/ia64/ia64.h, config/ip2k/ip2k.h,
+	config/ip2k/ip2k.md, config/ip2k/libgcc.S,
+	config/m32r/linux.h, config/m32r/m32r.c, config/m32r/m32r.h,
+	config/m68k/m68k.c, config/m68k/netbsd-elf.h,
+	config/mips/mips.c, config/mmix/mmix.c, config/mmix/mmix.md,
+	config/ns32k/netbsd.h, config/ns32k/ns32k.c,
+	config/ns32k/ns32k.h, config/pdp11/pdp11.h,
+	config/rs6000/darwin-ldouble.c, config/s390/s390.h,
+	config/s390/s390.md, config/sparc/netbsd-elf.h,
+	config/sparc/openbsd.h, config/sparc/sparc.c,
+	config/xtensa/lib2funcs.S: Fix comment formatting.
+
+2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/alpha/alpha.c, config/arc/arc.c,
 	config/arm/arm-cores.def, config/arm/arm.c, config/arm/arm.h,
 	config/arm/arm1026ejs.md, config/arm/arm1136jfs.md,
