2004-02-02  Graydon Hoare  <graydon@redhat.com>
	* javax/swing/SwingUtilities.java: Many new functions.
	* java/awt/Container.java (LightweightDispatcher): Reimplement.
	* javax/swing/basic/BasicGraphicsUtils.java
	(getPreferredButtonSize): Start layout from top-left corner.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77271 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-02  Graydon Hoare  <graydon@redhat.com>
+
+	* javax/swing/SwingUtilities.java: Many new functions.
+	* java/awt/Container.java (LightweightDispatcher): Reimplement.
+	* javax/swing/basic/BasicGraphicsUtils.java 
+	(getPreferredButtonSize): Start layout from top-left corner.
+
 2004-02-04  Olga Rodimina  <rodimina@redhat.com>
 
 	* java/awt/geom/AffineTransform.java: 
