--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-04  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.c (s390_trampoline_template): Remove gen_rtx().
+
 2004-02-04  David Edelsohn  <edelsohn@gnu.org>
 
 	* reload.c (refers_to_regno_for_reload_p): Test regno, not inner_regno,
