--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-02-04  Geoffrey Keating  <geoffk@apple.com>
+
+	Merge from upstream:
+
+	* ltmain.in: When setting IFS to '~', be careful about user
+	arguments that contain '~'.
+
+	2004-02-04  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in (infer_tag): Move tag inferrence to a shell function.
+	Also test $base_compile against $CC with escaped arguments. Bug
+	reported by Geoff Keating <geoffk@apple.com>.
+
 2004-02-04  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* MAINTAINERS: Remove i960 port.
