--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* config/arm/arm.h (REG_CLASS_NAMES): Add missing comma.
+
 2004-02-04  Geoffrey Keating  <geoffk@apple.com>
 
 	* reload.c (find_equiv_reg): When checking for register overlap,
