* emit-rtl.c: Update the comment about the file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77312 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* emit-rtl.c: Update the comment about the file.
+
 2004-02-05  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* sourcebuild.texi (Test Idioms): Update testcase naming
