--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Jonathan Wakely  <redi@gcc.gnu.org>
+
+	* doc/install.texi: Update description of --gxx-include-dir to
+	give correct default value.
+
 2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.h (REG_OK_FOR_BASE_NONSTRICT_P): Replace
