2004-02-05  Michael Koch  <konqueror@gmx.de>
	* java/lang/Thread.java: Reordered fields, reformated much code,
	no functional changes, some variables renamed, javadoc comments
	merged.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77322 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-05  Michael Koch  <konqueror@gmx.de>
 
+	* java/lang/Thread.java: Reordered fields, reformated much code,
+	no functional changes, some variables renamed, javadoc comments
+	merged.
+
+2004-02-05  Michael Koch  <konqueror@gmx.de>
+
 	* java/util/zip/Deflater.java,
 	java/util/zip/DeflaterOutputStream.java,
 	java/util/zip/GZIPInputStream.java:
