--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-05  Dorit Naishlos  <dorit@il.ibm.com>
+
+	* config/rs6000/altivec.md (*movv4si_internal): At least one
+	operand must be altivec_register_operand.
+	(*movv8hi_internal1): Likewise.
+	(*movv16qi_internal1): Likewise.
+	(*movv4sf_internal1): Likewise.
+
 2004-02-05  David Edelsohn  <edelsohn@gnu.org>
 
 	* configure.ac (gcc_cv_as_powerpc_mfcrf): Correct test for mfcr.
