2004-02-05  Michael Koch  <konqueror@gmx.de>
	* java/lang/Thread.java
	(Thread): Reordered.
	(setContextClassLoader): Fixed javadoc comment.
	(setPriority): Reordered.
	(yield): Reordered.
	(initialize_native): Reordered.
	(gen_name): Reordered.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77327 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,15 @@
 2004-02-05  Michael Koch  <konqueror@gmx.de>
 
+	* java/lang/Thread.java
+	(Thread): Reordered.
+	(setContextClassLoader): Fixed javadoc comment.
+	(setPriority): Reordered.
+	(yield): Reordered.
+	(initialize_native): Reordered.
+	(gen_name): Reordered.
+
+2004-02-05  Michael Koch  <konqueror@gmx.de>
+
 	* java/lang/Thread.java: Reordered fields, reformated much code,
 	no functional changes, some variables renamed, javadoc comments
 	merged.
