2004-02-05  Michael Koch  <konqueror@gmx.de>
	* java/awt/datatransfer/DataFlavor.java
	(imageFlavor): Javadoc added.
	(javaJVMLocalObjectType): Fixed.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77328 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-05  Michael Koch  <konqueror@gmx.de>
 
+	* java/awt/datatransfer/DataFlavor.java
+	(imageFlavor): Javadoc added.
+	(javaJVMLocalObjectType): Fixed.
+
+2004-02-05  Michael Koch  <konqueror@gmx.de>
+
 	* java/lang/Thread.java
 	(Thread): Reordered.
 	(setContextClassLoader): Fixed javadoc comment.
