--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13714
+	* typeck.c (lookup_destructor): Tweak error message.
+
 2004-02-05  Jan Hubicka  <jh@suse.cz>
 
 	* tree.c (cp_cannot_inline_tree_fn):  Allow inlining of comdat
