ada/ 	* ada/utils.c (create_param_decl): Replace PROMOTE_PROTOTYPES 	with targetm.calls.promote_prototypes.
	gcc/
	* config/cris/cris.h: Replace PROMOTE_PROTOTYPES with
	TARGET_PROMOTE_PROTOTYPES.

	cp/
	* call.c (type_passed_as): Replace PROMOTE_PROTOTYPES with
	targetm.calls.promote_prototypes.

	java/
	* Make-lang.in (java/decl.o, java/expr.o, java/parse.o):
	Depend on target.h.
	* decl.c: Include target.h.
	(start_java_method): Replace PROMOTE_PROTOTYPES with
	targetm.calls.promote_prototypes.
	* expr.c: Include target.h.
	(pop_arguments): Replace PROMOTE_PROTOTYPES with
	targetm.calls.promote_prototypes.
	* parse.y: Include target.h.
	(start_complete_expand_method): Replace PROMOTE_PROTOTYPES
	with targetm.calls.promote_prototypes.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77345 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* ada/utils.c (create_param_decl): Replace PROMOTE_PROTOTYPES
+	with targetm.calls.promote_prototypes.
+
 2004-02-04  Robert Dewar  <dewar@gnat.com>
 
 	* 5gtasinf.adb, 5gtasinf.ads, 5gtaprop.adb, ali.adb,
