--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/cris/cris.h: Replace PROMOTE_PROTOTYPES with
+	TARGET_PROMOTE_PROTOTYPES.
+
 2004-02-05  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	PR middle-end/13750
