--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  Devang Patel  <dpatel@apple.com>
+
+	* dwarf2out.c (force_type_die): Look up input type itself
+	instead of root_type() of type.
+	
 2004-02-05  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	* config/s390/s390.md ("*tmqidi_ext"): New insn.
