* configure.in: Don't pass --with-stabs on IRIX 5 either. 	* configure: Regenerate.
	gcc:
	* config/mips/iris5gas.h (PREFERRED_DEBUGGING_TYPE): Define.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77349 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/mips/iris5gas.h (PREFERRED_DEBUGGING_TYPE): Define.
+
 2004-02-05  Devang Patel  <dpatel@apple.com>
 
 	* dwarf2out.c (force_type_die): Look up input type itself
