--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Kelley Cook  <kcook@gcc.gnu.org>
+
+	Make-lang.in (po-generated):  Delete.
+
 2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* Make-lang.in (java/decl.o, java/expr.o, java/parse.o):
