--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config.gcc: Remove i370 support.
+
 2004-02-05  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* doc/install.texi:  Update automake and autoconf version
