* reload.c (refers_to_regno_for_reload_p): Index hard_regno_nregs         with inner_regno, not regno.         * rtlanal.c (refers_to_regno_p): Same.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77370 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-05  David Edelsohn  <edelsohn@gnu.org>
+
+	* reload.c (refers_to_regno_for_reload_p): Index hard_regno_nregs
+	with inner_regno, not regno.
+	* rtlanal.c (refers_to_regno_p): Same.
+
 2004-02-05  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config.gcc: Remove i370 support.
