* config/sh/t-linux (SHLIB_INSTALL): Prepend $$(DESTDIR) 	to $$(slibdir) in the installation commands.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77371 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-05  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>
+
+	* config/sh/t-linux (SHLIB_INSTALL): Prepend $$(DESTDIR)
+	to $$(slibdir) in the installation commands.
+
 2004-02-05  David Edelsohn  <edelsohn@gnu.org>
 
 	* reload.c (refers_to_regno_for_reload_p): Index hard_regno_nregs
