--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-19  Janne Blomqvist  <jb@gcc.gnu.org>
+
+	* Actually remove files that should have been removed by r243799.
+
 2016-12-19  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 
 	* gfortran.map: Remove _gfortran_stop_numeric_f08.
