--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-19  David Malcolm  <dmalcolm@redhat.com>
+
+	* print-rtl-function.c (print_rtx_function): Update
+	example in comment to reflect current format.
+
 2016-12-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/i386/i386.md (*popcounthi2_1): New insn_and_split pattern.
