--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-20  Richard Biener  <rguenther@suse.de>
+
+	* passes.c (execute_one_pass): Handle going out of SSA w/o
+	hitting pass_startwith.  Handle skipping property providers.
+
 2016-12-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR target/78694
