--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-20  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* gcc.target/arm/pr78255-2.c: Fix to work for targets
+	that do not optimize for tailcall.
+
 2016-12-20  David Edelsohn  <dje.gcc@gmail.com>
 
 	* gcc.dg/tls/pr78796.c: dg-add-options tls.
