--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-21  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	* iresolve.c (gfc_resolve_ftell): Call "ftell" instead of "ftell2".
+
 2016-12-20  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	* trans-types.c (gfc_init_types): Don't redefine boolean type node.
